<resources>
    <string name="app_name">RigCraft</string>
    <string name="title_activity_login">Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginbtn">Login</string>
    <string name="confirmPassword">Re-Enter Password</string>
    <string name="registernow">Don\'t Have An Account? Register Now.</string>
    <string name="loginNow">Already Have An Account? Login Now</string>
    <string name="chatbot">Chatbot</string>
    <string name="userAccount">Account</string>
    <string name="buildGuide">Build Guide</string>
    <string name="partPicker">Part Picker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SocialHub">Social Hub</string>

</resources>